# compiler

./: .clang-format  .gitignore  C.g4  CMakeLists.txt  README.md  build.sh  test.sh
asm/: printf.asm  stdio.asm
examples/: json.json
examples/expressions/: weird.c
grammars/: C.g4  JSON.g4
src/: ast.cpp  ast.h  ast2ir.cpp  astVisitor.h  compilationError.h  converterVisitor.cpp  converterVisitor.h  cst.cpp  cst.h  dotVisitor.cpp  dotVisitor.h  errors.h  folding.cpp  folding.h  main.cpp  operation.cpp  operation.h  table.cpp  table.h  type.cpp  type.h  visitor.cpp  visitor.h
src/IRVisitor/: irVisitor.cpp  irVisitor.h  llvmPasses.h
src/MIPSVisitor/: mips.cpp  mips.h  mipsVisitor.cpp  mipsVisitor.h  printf.asm
src/Thomas/: ast.cpp  ast.h
src/ast/: expressions.cpp  expressions.h  helper.h  node.cpp  node.h  statements.cpp  statements.h
tests/: bubble.c
tests/arrays/: basic.c  cast.c  combination.c  pointer.c
tests/assignment/: array.c  assign.c  basic.c  cast.c  const-error.c  const-error2.c  const.c  error.c  error2.c  prop.c  weird.c
tests/cases/: floats.c  ints.c  pointers.c  print.c  test.c
tests/expressions/: addmul.c  basic.c  comment.c  mixed.c  weird.c
tests/functions/: args.c  basic.c  basic2.c  predecl.c
tests/mips/: args.c  array.c  fac.c  fac2.c  floats.c  fwd.c  long.c  pointers.c  printf.c  returns.c
tests/misc/: basic.c  cast.c  if-fold.c  propagation.c  weird.c
tests/opdracht 1/: extra-hex.c  overflow2.c
tests/opdracht 2/: basic3.c  opt-propagation.c  opt-ptr-cast.c  rvalue.c  weird.c
tests/opdracht 3/: printf.c
tests/opdracht 4/: for.c  opt-condition-fold.c
tests/opdracht 6/: extra-string.c  opt-multi-ref-deref.c  opt-multi.c
tests/project_4/: if.c  (+2 more)
ttt/: test.c
(+126 files in other folders)
